# ckframework

./: .gitignore  CMakeLists.txt  README.md
cinek/: CMakeLists.txt  allocator.cpp  allocator.hpp  buffer.hpp  callback_task.hpp  circular_queue.hpp  ckdefs.h  cstringstack.cpp  cstringstack.hpp  debug.c  debug.h  file.cpp  file.hpp  filestreambuf.cpp  filestreambuf.hpp  intrusive_list.hpp  managed_dictionary.hpp  managed_handle.hpp  managed_handle.inl  memory.c  memory.h  memorystack.cpp  memorystack.hpp  objectpool.hpp  objectpool.inl  std_allocator.hpp  task.cpp  task.hpp  taskscheduler.cpp  taskscheduler.hpp  tree_node.hpp  tree_node.inl  types.hpp  uuid.cpp  uuid.hpp
cinek/tests/: CMakeLists.txt
ckentity/: CMakeLists.txt  datarowset.cpp  datarowset.hpp  entity.h  entitydatatable.cpp  entitydatatable.hpp  entitygroup.cpp  entitygroup.hpp  entitygroupmap.cpp  entitygroupmap.hpp  entitystore.cpp  entitystore.hpp  vectordatarowset.hpp
ckentity/tests/: CMakeLists.txt  ckentitytestmain.cpp  testcomponent.cpp  testcomponent.hpp
ckfilestream/: CMakeLists.txt  file.hpp  filestreambuf.hpp  filestreambuf.inl
ckio/: CMakeLists.txt  file.c  file.h  filewin.c
ckjson/: CMakeLists.txt  json.hpp  jsoncollectionloader.cpp  jsoncollectionloader.hpp  jsontypes.hpp
ckjson/rapidjson/error/: error.h
ckm/: CMakeLists.txt  aabb.hpp  equation.hpp  equation.inl  geometry.hpp  geometry.inl  keyframe.hpp  math.hpp  math.inl  mathtypes.hpp  mathtypes.inl  sequence.hpp  sequence.inl
ckmsg/: CMakeLists.txt  buffer.hpp  client.cpp  client.hpp  client.inl  endpoint.cpp  endpoint.hpp  endpoint.inl  message.cpp  message.hpp  messenger.cpp  messenger.hpp  messenger.inl  sender.hpp  server.cpp  server.hpp  server.inl
cktask/: CMakeLists.txt  task.cpp  task.hpp  task.inl  taskscheduler.cpp  taskscheduler.hpp  taskscheduler.inl
entity/: datarowset.cpp  datarowset.hpp  entity.h  entitydatatable.cpp  entitystore.hpp
proj/msvc/: ReadMe.txt  cklibs.vcxproj  cklibs.vcxproj.filters
proj/xcode/ckframework.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  cstringstacktests.cpp
utils/test/: minunit.h
